--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Figtree:ital,wght@0,300..900;1,300..900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&family=Young+Serif&display=swap');
+  </style>
+
+  <link type="text/css" rel="stylesheet" href="styles.css" />
+
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <div class="parent">
@@ -21,6 +22,7 @@
         <p class="name">Daniel Clifford</p>
         <p>Verified Graduate</p>
       </div>
+
       <h1>
         I received a job offer mid-course, and the subjects I learned were current, if not more so,
         in the company I joined. I honestly feel I got every penny’s worth.
@@ -33,33 +35,39 @@
         the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
       </p>
     </section>
+
     <section class="box2">
       <div class="header">
         <p class="name">Jonathan Walters</p>
         <p>Verified Graduate</p>
       </div>
+
       <h1>The team was very supportive and kept me motivated</h1>
       <p>
         “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
         for a big company. This was one of the best investments I’ve made in myself. ”
       </p>
     </section>
+
     <section class="box3">
       <div class="header">
         <p class="name">Jeanette Harmon</p>
         <p>Verified Graduate</p>
       </div>
+
       <h1>An overall wonderful and rewarding experience</h1>
       <p>
         “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
         while doing something I love. ”
       </p>
     </section>
+
     <section class="box4">
       <div class="header">
         <p class="name">Patrick Abrams</p>
         <p>Verified Graduate</p>
       </div>
+
       <h1>
         Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
         learning from their experiences was easy.
@@ -71,11 +79,13 @@
         an incredible community of smart and amazing people. ”
       </p>
     </section>
+
     <section class="box5">
       <div class="header">
         <p class="name">Kira Whittle</p>
         <p>Verified Graduate</p>
       </div>
+
       <h1>Such a life-changing experience. Highly recommended!</h1>
       <p>
         “ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from
