Added an id class to add a form of indentification for the second 'p' element within the header. Then adjusted the text-color of the id class for .box1 and .box2.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="box1">
       <div class="header">
         <p class="name">Daniel Clifford</p>
-        <p>Verified Graduate</p>
+        <p class="id">Verified Graduate</p>
       </div>
 
       <h1>
@@ -39,7 +39,7 @@
     <section class="box2">
       <div class="header">
         <p class="name">Jonathan Walters</p>
-        <p>Verified Graduate</p>
+        <p class="id">Verified Graduate</p>
       </div>
 
       <h1>The team was very supportive and kept me motivated</h1>
@@ -52,7 +52,7 @@
     <section class="box3">
       <div class="header">
         <p class="name">Jeanette Harmon</p>
-        <p>Verified Graduate</p>
+        <p class="id">Verified Graduate</p>
       </div>
 
       <h1>An overall wonderful and rewarding experience</h1>
@@ -65,7 +65,7 @@
     <section class="box4">
       <div class="header">
         <p class="name">Patrick Abrams</p>
-        <p>Verified Graduate</p>
+        <p class="id">Verified Graduate</p>
       </div>
 
       <h1>
@@ -83,7 +83,7 @@
     <section class="box5">
       <div class="header">
         <p class="name">Kira Whittle</p>
-        <p>Verified Graduate</p>
+        <p class="id">Verified Graduate</p>
       </div>
 
       <h1>Such a life-changing experience. Highly recommended!</h1>
