Wrapped the name and id within .box1 in a new container titled 'header-information'. Adjusted the layout with the newly added image by applying a flex-box and allows a default flex-direction (row). Adjusted the size of the image and made its border-radius 50%, so that it appeared as a circle. Lastly, adjusted the 'margin-right' of the img element, so there is a gap between it and the header-information.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
   <div class="parent">
     <section class="box1">
       <div class="header">
-        <p class="name">Daniel Clifford</p>
-        <p class="id">Verified Graduate</p>
+        <img src="images/image-daniel.jpg" alt="daniel-icon" />
+        <div class="header-information">
+          <p class="name">Daniel Clifford</p>
+          <p class="id">Verified Graduate</p>
+        </div>
       </div>
 
       <h1>
