--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
 
     <section class="box2">
       <div class="header">
-        <p class="name">Jonathan Walters</p>
-        <p class="id">Verified Graduate</p>
+        <img src="images/image-jonathan.jpg" alt="jonathan-icon" />
+        <div class="header-information">
+          <p class="name">Jonathan Walters</p>
+          <p class="id">Verified Graduate</p>
+        </div>
       </div>
 
       <h1>The team was very supportive and kept me motivated</h1>
@@ -54,8 +57,11 @@
 
     <section class="box3">
       <div class="header">
-        <p class="name">Jeanette Harmon</p>
-        <p class="id">Verified Graduate</p>
+        <img src="images/image-jeanette.jpg" alt="jeanette-icon" />
+        <div class="header-information">
+          <p class="name">Jeanette Harmon</p>
+          <p class="id">Verified Graduate</p>
+        </div>
       </div>
 
       <h1>An overall wonderful and rewarding experience</h1>
@@ -67,8 +73,11 @@
 
     <section class="box4">
       <div class="header">
-        <p class="name">Patrick Abrams</p>
-        <p class="id">Verified Graduate</p>
+        <img src="images/image-patrick.jpg" alt="patrick-icon" />
+        <div class="header-information">
+          <p class="name">Patrick Abrams</p>
+          <p class="id">Verified Graduate</p>
+        </div>
       </div>
 
       <h1>
@@ -85,8 +94,11 @@
 
     <section class="box5">
       <div class="header">
-        <p class="name">Kira Whittle</p>
-        <p class="id">Verified Graduate</p>
+        <img src="images/image-kira.jpg" alt="kira-icon" />
+        <div class="header-information">
+          <p class="name">Kira Whittle</p>
+          <p class="id">Verified Graduate</p>
+        </div>
       </div>
 
       <h1>Such a life-changing experience. Highly recommended!</h1>
