--- a/index.html
+++ b/index.html
@@ -17,80 +17,79 @@
 </head>
 <body>
   <div class="parent">
-    <section class="box1">
-      <div class="header">
-        <img src="images/image-daniel.jpg" alt="daniel-icon" />
-        <div class="header-information">
-          <p class="name">Daniel Clifford</p>
-          <p class="id">Verified Graduate</p>
-        </div>
+    <div class="special-parent-container">
+      <div class="special-child-container-top">
+        <section class="box1">
+          <div class="header">
+            <img src="images/image-daniel.jpg" alt="daniel-icon" />
+            <div class="header-information">
+              <p class="name">Daniel Clifford</p>
+              <p class="id">Verified Graduate</p>
+            </div>
+          </div>
+          <h1>
+            I received a job offer mid-course, and the subjects I learned were current, if not more so,
+            in the company I joined. I honestly feel I got every penny’s worth.
+          </h1>
+          <p class="description">
+            “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a
+            transition and have heard some people who had an amazing experience here. I signed up
+            for the free intro course and found it incredibly fun! I enrolled shortly thereafter.
+            The next 12 weeks was the best - and most grueling - time of my life. Since completing
+            the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
+          </p>
+        </section>
+        <section class="box2">
+          <div class="header">
+            <img src="images/image-jonathan.jpg" alt="jonathan-icon" />
+            <div class="header-information">
+              <p class="name">Jonathan Walters</p>
+              <p class="id">Verified Graduate</p>
+            </div>
+          </div>
+          <h1>The team was very supportive and kept me motivated</h1>
+          <p class="description">
+            “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
+            for a big company. This was one of the best investments I’ve made in myself. ”
+          </p>
+        </section>
       </div>
-
-      <h1>
-        I received a job offer mid-course, and the subjects I learned were current, if not more so,
-        in the company I joined. I honestly feel I got every penny’s worth.
-      </h1>
-      <p class="description">
-        “ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a
-        transition and have heard some people who had an amazing experience here. I signed up
-        for the free intro course and found it incredibly fun! I enrolled shortly thereafter.
-        The next 12 weeks was the best - and most grueling - time of my life. Since completing
-        the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”
-      </p>
-    </section>
-
-    <section class="box2">
-      <div class="header">
-        <img src="images/image-jonathan.jpg" alt="jonathan-icon" />
-        <div class="header-information">
-          <p class="name">Jonathan Walters</p>
-          <p class="id">Verified Graduate</p>
-        </div>
+      <div class="special-child-container-bottom">
+        <section class="box3">
+          <div class="header">
+            <img src="images/image-jeanette.jpg" alt="jeanette-icon" />
+            <div class="header-information">
+              <p class="name">Jeanette Harmon</p>
+              <p class="id">Verified Graduate</p>
+            </div>
+          </div>
+          <h1>An overall wonderful and rewarding experience</h1>
+          <p class="description">
+            “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
+            while doing something I love. ”
+          </p>
+        </section>
+        <section class="box4">
+          <div class="header">
+            <img src="images/image-patrick.jpg" alt="patrick-icon" />
+            <div class="header-information">
+              <p class="name">Patrick Abrams</p>
+              <p class="id">Verified Graduate</p>
+            </div>
+          </div>
+          <h1>
+            Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
+            learning from their experiences was easy.
+          </h1>
+          <p class="description">
+            “ The staff seem genuinely concerned about my progress which I find really refreshing. The program
+            gave me the confidence necessary to be able to go out in the world and present myself as a capable
+            junior developer. The standard is above the rest. You will get the personal attention you need from
+            an incredible community of smart and amazing people. ”
+          </p>
+        </section>
+            </div>
       </div>
-
-      <h1>The team was very supportive and kept me motivated</h1>
-      <p class="description">
-        “ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer
-        for a big company. This was one of the best investments I’ve made in myself. ”
-      </p>
-    </section>
-
-    <section class="box3">
-      <div class="header">
-        <img src="images/image-jeanette.jpg" alt="jeanette-icon" />
-        <div class="header-information">
-          <p class="name">Jeanette Harmon</p>
-          <p class="id">Verified Graduate</p>
-        </div>
-      </div>
-
-      <h1>An overall wonderful and rewarding experience</h1>
-      <p class="description">
-        “ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living
-        while doing something I love. ”
-      </p>
-    </section>
-
-    <section class="box4">
-      <div class="header">
-        <img src="images/image-patrick.jpg" alt="patrick-icon" />
-        <div class="header-information">
-          <p class="name">Patrick Abrams</p>
-          <p class="id">Verified Graduate</p>
-        </div>
-      </div>
-
-      <h1>
-        Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and
-        learning from their experiences was easy.
-      </h1>
-      <p class="description">
-        “ The staff seem genuinely concerned about my progress which I find really refreshing. The program
-        gave me the confidence necessary to be able to go out in the world and present myself as a capable
-        junior developer. The standard is above the rest. You will get the personal attention you need from
-        an incredible community of smart and amazing people. ”
-      </p>
-    </section>
 
     <section class="box5">
       <div class="header">
